# VCTPB-SQL-transfer

./: .gitignore
vst/: pyproject.toml  savedata.db
vst/savedata/backup/2022-03-13-22-14-47/: match_list_1.txt
vst/savedata/backup/2022-03-20-14-50-51/: colors.txt  user_list_1.txt
vst/savedata/backup/2022-03-24-14-25-03/: bet_list_1.txt  user_list_1.txt
vst/savedata/backup/2022-03-25-07-37-41/: match_list_1.txt
vst/savedata/backup/2022-03-26-19-36-12/: bet_list_1.txt  match_list_1.txt  user_list_1.txt
vst/savedata/backup/2022-03-27-18-59-22/: bet_list_1.txt
vst/savedata/backup/2022-03-28-06-51-44/: user_list_1.txt
vst/savedata/backup/2022-03-29-06-43-03/: user_list_1.txt
vst/savedata/backup/2022-03-29-07-11-56/: user_list_1.txt
vst/savedata/backup/2022-03-29-07-13-03/: colors.txt  user_list_1.txt
vst/savedata/backup/2022-03-29-07-23-12/: match_list_1.txt  user_list_1.txt
vst/tests/: test_vst.py
vst/vst/: Bet.py  Color.py  DBBet.py  DBMatch.py  DBUser.py  Match.py  User.py  alchemyref.py  dbinterface.py  initdb.py  initimport.py  main.py  sqlaobjs.py  sqlinterface.py  sqltypes.py
