[tool.poetry]
name = "vst"
version = "0.1.0"
description = ""
authors = ["MaxOrtGit <maxrort@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2022.1"
jsonpickle = "^2.1.0"
SQLAlchemy = "^1.4.32"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
